Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjBoolObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(true)
        Test(v)
    end

    action Test(Text var)
    end
end
